# nexly-agent-ai

./: .dockerignore  .env.example  Dockerfile  compose.yaml  main.py  pyproject.toml  test-data.py
src/api/v1/endpoints/: predict.py
src/core/: config.py
src/integrations/: mistral_client.py
src/services/: data_cleaning_service.py  forecast_service.py
src/utils/: file_helper.py
