[project]
name = "nexly-agent-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.1",
    "prophet>=1.3.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
